Calculator init updated

--- a/SourceCode/2023/April2023/Week1/Calculator/Main.xaml
+++ b/SourceCode/2023/April2023/Week1/Calculator/Main.xaml
@@ -1,8 +1,8 @@
-<Activity mc:Ignorable="sap sap2010" x:Class="Main" this:Main.firstNumber="10" this:Main.secondNumber="20" xmlns="http://schemas.microsoft.com/netfx/2009/xaml/activities" xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" xmlns:sap="http://schemas.microsoft.com/netfx/2009/xaml/activities/presentation" xmlns:sap2010="http://schemas.microsoft.com/netfx/2010/xaml/activities/presentation" xmlns:scg="clr-namespace:System.Collections.Generic;assembly=System.Private.CoreLib" xmlns:sco="clr-namespace:System.Collections.ObjectModel;assembly=System.Private.CoreLib" xmlns:this="clr-namespace:" xmlns:ui="http://schemas.uipath.com/workflow/activities" xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
+<Activity mc:Ignorable="sap sap2010" x:Class="Main" this:Main.In_firstNumber="10" this:Main.In_secondNumber="20" xmlns="http://schemas.microsoft.com/netfx/2009/xaml/activities" xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" xmlns:sap="http://schemas.microsoft.com/netfx/2009/xaml/activities/presentation" xmlns:sap2010="http://schemas.microsoft.com/netfx/2010/xaml/activities/presentation" xmlns:scg="clr-namespace:System.Collections.Generic;assembly=System.Private.CoreLib" xmlns:sco="clr-namespace:System.Collections.ObjectModel;assembly=System.Private.CoreLib" xmlns:this="clr-namespace:" xmlns:ui="http://schemas.uipath.com/workflow/activities" xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
   <x:Members>
-    <x:Property Name="firstNumber" Type="InArgument(x:Int32)" />
-    <x:Property Name="secondNumber" Type="InArgument(x:Int32)" />
-    <x:Property Name="Result" Type="OutArgument(x:Int32)" />
+    <x:Property Name="In_firstNumber" Type="InArgument(x:Int32)" />
+    <x:Property Name="In_secondNumber" Type="InArgument(x:Int32)" />
+    <x:Property Name="Out_Result" Type="OutArgument(x:Int32)" />
   </x:Members>
   <VisualBasic.Settings>
     <x:Null />
@@ -91,10 +91,10 @@
       </sap:WorkflowViewStateService.ViewState>
       <Assign sap2010:Annotation.AnnotationText="Store the addition of tow inputs in Result variable" sap:VirtualizedContainerService.HintSize="434,113" sap2010:WorkflowViewState.IdRef="Assign_1">
         <Assign.To>
-          <OutArgument x:TypeArguments="x:Int32">[Result]</OutArgument>
+          <OutArgument x:TypeArguments="x:Int32">[Out_Result]</OutArgument>
         </Assign.To>
         <Assign.Value>
-          <InArgument x:TypeArguments="x:Int32">[firstNumber+secondNumber]</InArgument>
+          <InArgument x:TypeArguments="x:Int32">[In_firstNumber+In_secondNumber]</InArgument>
         </Assign.Value>
         <sap:WorkflowViewStateService.ViewState>
           <scg:Dictionary x:TypeArguments="x:String, x:Object">
@@ -102,7 +102,7 @@
           </scg:Dictionary>
         </sap:WorkflowViewStateService.ViewState>
       </Assign>
-      <ui:LogMessage DisplayName="Log Message" sap:VirtualizedContainerService.HintSize="434,92" sap2010:WorkflowViewState.IdRef="LogMessage_1" Message="[&quot;Addition of two No : &quot;+Result.ToString]" />
+      <ui:LogMessage DisplayName="Log Message" sap:VirtualizedContainerService.HintSize="434,92" sap2010:WorkflowViewState.IdRef="LogMessage_1" Message="[&quot;Addition of two No : &quot;+Out_Result.ToString]" />
     </Sequence>
   </Sequence>
 </Activity>
