--- a/SourceCode/2023/April2023/Week1/Calculator/Division.xaml
+++ b/SourceCode/2023/April2023/Week1/Calculator/Division.xaml
@@ -98,7 +98,7 @@
           <InArgument x:TypeArguments="x:Double">[in_Num1/in_Num2]</InArgument>
         </Assign.Value>
       </Assign>
-      <ui:LogMessage DisplayName="Log Message" sap:VirtualizedContainerService.HintSize="433.6,92.8" sap2010:WorkflowViewState.IdRef="LogMessage_1" Level="Info" Message="[&quot;Division of two numbers - &quot;+out_Division.ToString]" />
+      <ui:LogMessage DisplayName="Log Message" sap:VirtualizedContainerService.HintSize="433.6,92.8" sap2010:WorkflowViewState.IdRef="LogMessage_1" Level="Info" Message="[&quot;Division of two numbers = &quot;+out_Division.ToString]" />
     </Sequence>
   </Sequence>
 </Activity>
